classDiagram

    Reserva -->"1" Cliente
    Reserva -->"1" Chico
    Cliente -->"1" TipoDocumento
    Chico -->"1" TipoDocumento
    Cliente -->"1..*" Chico
    Reserva o-- CambioEstadoReserva
    CambioEstadoReserva -->"1" EstadoReserva
    Reserva -->"0..1" Festejo
    Festejo -->"1" Coordinadora
    Festejo -->"0..*" Asistencia
    Festejo -->"1" EstadoFestejo
    Reserva -->"1" Carpa
    Reserva -->"1" PaqueteReserva
    Reserva -->"0..1" Factura
    Asistencia -->"1" Chico


    class Festejo {
        - dateTime fechaHoraInicio
        - dateTime fechaHoraFin
        - Asistencia[list] listaAsistencias
        - Coordinadora coordinadora
        - EstadoFestejo estadoFestejo
        - calcularCostoAdicional()
        + mostrarFestejo()
    }

    class Coordinadora {
        - str nombre
        - str apellido
        + mostrarCoordinadora()
    }

    class EstadoFestejo {
        - str nombre
        - str descripcion
        + mostrarEstadoFestejo()
    }

    class Chico {
        - str nombre
        - str apellido
        - int edad
        - TipoDocumento tipoDocumento
        - int numeroDocumento
        + mostrarChico()
    }

    class Reserva {
        - dateTime fechaHoraFestejo
        - str Observacion
        - Cliente cliente
        - Chico cumpleaniero
        - CambioEstadoReserva[list] listaCambiosEstado
        - PaqueteReserva paqueteSeleccionado
        - Carpa carpaSeleccionada
        - Festejo festejo
        - Factura factura

        - calcularCostoBase()
        - calcularSeña()
        - crearReserva()
        - setPendienteConfirmacion()
        - pasaron5Dias()
        - setAnulada()
        - setSeñaPagada()
        - generarContrato()
        - cancelarReserva()
        - calcularRetencion()
        + mostrarReserva()
    }

    class CambioEstadoReserva {
        - dateTime fechaHoraInicio
        - dateTime fechaHoraFin
        - EstadoReserva estadoReserva
        + conocerEstadosReserva()
        + setFechaHoraFin()
        + setCreada()
        + setPendienteConfirmacion()
        + pasaron5Dias()
        + setAnulada()
        + setSeniaPagada()
        + setCancelada()
        + mostrarEstadoReserva()
    }

    class EstadoReserva {
        - str nombre
        - str descripcion
        + esCreada()
        + esPendienteConfirmacion()
        + esAnulada()
        + esSeniaPagada()
        + esCancelada()
        + mostrarEstadoReserva()
    }
    class Carpa {
        - int numero
        - str ubicacion
        + mostrarCarpa()
    }

    class PaqueteReserva {
        - str nombre
        - str descripcion
        - float costoPaquete
        + getCostoPaquete()
        + mostrarPaquete()
    }

    class Cliente {
        - str nombre
        - str apellido
        - TipoDocumento tipoDocumento
        - int numeroDocumento
        - str domicilio
        - str telefono
        - str celular
        - email email
        - Chico[list] Hijos
        + mostrarCliente()
    }

    class Asistencia {
        - int numeroAsistencia
        - Chico chico
    }

    class TipoDocumento{
        - str nombre
        - str descripcion
    }

    class Factura {
        - String numero
        - dateTime fechaHoraEmision
        - float importeServicio
        - float importeExtras
        - float saldoPendiente
        - calcularImporteTotal()
        + mostrarFactura()
    }
